Wrong shading with "Random Walk" in combination with branched path tracing #54105

Closed
opened 2018-02-19 17:37:39 +01:00 by Steffen Dünner · 7 comments

System Information
Win10 x64, nVidia GTX 1080Ti

Blender Version
Broken: Latest master (all versions with the brand-new "Random Walk" SSS
Worked: none

Short description of error
I noticed that objects using the new Random Walk SSS are rendered black when behind a refractive object e.g. a Principled shader with Transmission set to 1 or a simple "Refraction BSDF. Transparent BSDF doesn't show this problem.

Exact steps for others to reproduce the error

  • Open the attached scene file in the latest master / buildbot build
    Random_Walk_Bug_v01.blend
  • Hit F12 to render:
    Branched_Path_Tracing.png
  • Now set the sampling to simple "Path Tracing" and render again:
    Path_Tracing.png
**System Information** Win10 x64, nVidia GTX 1080Ti **Blender Version** Broken: Latest master (all versions with the brand-new "Random Walk" SSS Worked: none **Short description of error** I noticed that objects using the new Random Walk SSS are rendered black when behind a refractive object e.g. a Principled shader with Transmission set to 1 or a simple "Refraction BSDF. Transparent BSDF doesn't show this problem. **Exact steps for others to reproduce the error** - Open the attached scene file in the latest master / buildbot build [Random_Walk_Bug_v01.blend](https://archive.blender.org/developer/F2323617/Random_Walk_Bug_v01.blend) - Hit F12 to render: ![Branched_Path_Tracing.png](https://archive.blender.org/developer/F2323619/Branched_Path_Tracing.png) - Now set the sampling to simple "Path Tracing" and render again: ![Path_Tracing.png](https://archive.blender.org/developer/F2323622/Path_Tracing.png)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscribers: @brecht, @ThomasDinges

Added subscribers: @brecht, @ThomasDinges

Confirmed, also happens with Glass BSDF. Any idea @brecht?

Confirmed, also happens with Glass BSDF. Any idea @brecht?
Brecht Van Lommel self-assigned this 2018-02-19 21:26:46 +01:00

Yes, I forgot to update part of the code, will fix.

Yes, I forgot to update part of the code, will fix.

This issue was referenced by blender/cycles@44dadb61ea

This issue was referenced by blender/cycles@44dadb61ea50ab75bc3a7bf728aac8cac28699de

This issue was referenced by 606bc5f301

This issue was referenced by 606bc5f301505024d7cbbbcd12389ea286c3f825

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54105
No description provided.